--- a/package.json
+++ b/package.json
@@ -5,44 +5,69 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register src/app.ts /node_modules/.bin/bunyan",
-    "lint:check":"eslint .",
-    "lint:fix":"eslint --fix",
-    "prettier:check":"prettier --check .",
-    "prettier:fix":"prettier --write ."
-
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix",
+    "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "build": "ttsc -p .",
+    "start": "nodemon ./build/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/api": "^3.11.1",
+    "@bull-board/express": "^3.11.1",
+    "@bull-board/ui": "^3.11.1",
+    "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.2.1",
+    "@types/jest": "^29.4.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.9.0",
+    "bullmq": "^4.2.0",
     "bunyan": "^1.8.15",
+    "canvas": "^2.11.2",
+    "cloudinary": "^1.37.3",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.8",
     "eslint-config-prettier": "^8.8.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "ip": "^1.1.8",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "prettier": "^3.0.0",
     "redis": "^4.6.7",
     "socket.io": "^4.7.1",
-    "typescript": "^5.1.6"
+    "ttypescript": "^1.5.15",
+    "typescript": "4.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bull": "^3.15.9",
     "@types/bunyan": "^1.8.8",
     "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
+    "@types/lodash": "^4.14.196",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript-transform-paths": "^3.4.6"
   }
 }
