--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,19 @@
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "pretty": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    // npm i ttypescript
+    // npm add -D typescript-transform-paths
+    "plugins": [{ "transform": "typescript-transform-paths" }, { "transform": "typescript-transform-paths", "afterDeclarations": true }],
+    "paths": {
+      "@user/*": ["src/features/user/*"],
+      "@auth/*": ["src/features/auth/*"],
+      "@global/*": ["src/shared/globals/*"],
+      "@services/*": ["src/shared/services/*"],
+      "@sockets/*": ["src/shared/sockets/*"],
+      "@worker/*": ["src/shared/workers/*"],
+      // root is the last
+      "@root/*": ["src/*"]
+    }
   }
 }
-
