--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
+    "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandles --watchAll=false",
     "build": "ttsc -p .",
     "start": "nodemon ./build/app.js"
   },
@@ -21,7 +22,7 @@
     "@bull-board/ui": "^3.11.1",
     "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.2.1",
-    "@types/jest": "^29.4.3",
+    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
@@ -49,6 +50,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.4",
     "prettier": "^3.0.0",
     "redis": "^4.6.7",
     "socket.io": "^4.7.1",
@@ -63,9 +65,14 @@
     "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
+    "@types/ip": "^1.1.0",
     "@types/lodash": "^4.14.196",
+    "@types/nodemailer": "^6.4.9",
+    "jest": "^29.4.3",
+    "ts-jest":"^29.0.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript-transform-paths": "^3.4.6"
