--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "@bull-board/ui": "^3.11.1",
     "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.2.1",
-    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bull": "^4.9.0",
@@ -54,8 +53,7 @@
     "prettier": "^3.0.0",
     "redis": "^4.6.7",
     "socket.io": "^4.7.1",
-    "ttypescript": "^1.5.15",
-    "typescript": "4.8"
+    "typescript-transform-paths": "^3.4.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -69,12 +67,16 @@
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
     "@types/ip": "^1.1.0",
+    "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.196",
     "@types/nodemailer": "^6.4.9",
-    "jest": "^29.4.3",
-    "ts-jest":"^29.0.5",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript-transform-paths": "^3.4.6"
+    "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^3.14.2",
+    "typescript": "^5.2.2"
   }
 }
