--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "plugins": [{ "transform": "typescript-transform-paths" }, { "transform": "typescript-transform-paths", "afterDeclarations": true }],
     "paths": {
       "@user/*": ["src/features/user/*"],
+      "@reactions/*": ["src/features/reactions/*"],
       "@auth/*": ["src/features/auth/*"],
       "@post/*": ["src/features/post/*"],
       "@global/*": ["src/shared/globals/*"],
