feature:post-comments-feature

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "paths": {
       "@user/*": ["src/features/user/*"],
       "@reactions/*": ["src/features/reactions/*"],
+      "@comment/*": ["src/features/comments/*"],
       "@auth/*": ["src/features/auth/*"],
       "@post/*": ["src/features/post/*"],
       "@global/*": ["src/shared/globals/*"],
